    Tweaked the locale string 'Excavation.SubSkill.Archaeology.Description'
    Added locale string 'Excavation.SubSkill.Archaeology.Stat'
    Added locale string 'Excavation.SubSkill.Archaeology.Stat.Extra'

    When using WorldGuard (WG) with mcMMO, mcMMO now examines WG more carefully to determine if it is a compatible version or not, see the notes. Keep in mind WG is optional and not needed to run mcMMO.
    Fixed a bug that could result in Tree Feller failing to remove parts of a tree in snowy biomes. (This fix won't apply retroactively to old trees, see the notes)
    Updated Japanese locale (thanks snake)
    Tree Feller and other Super Abilities will damage tools with the Enchantment named 'Durability/Unbreaking' again, this does not apply to the NBT tag named Unbreaking (Unbreaking NBT tag is safe from damage however, try not to confuse them as they share the same name)
    Added new setting 'ExploitFix.TreeFellerReducedXP' to experience.yml
    Tree Feller will no longer give full XP for each block destroyed and instead give diminishing returns on XP for each block removed. You can turn this off by setting 'ExploitFix.TreeFellerReducedXP' in experience.yml to false
    Many skills which used to unlock at level 5/50 now unlock at level 1 instead
    Arrow Retrieval now unlocks at level 1 in both Standard and RetroMode
    Skill Shot now unlocks at level 1 in both Standard and RetroMode
    Dodge now unlocks at level 1 in both Standard and RetroMode
    Critical Strikes now unlocks at level 1 in both Standard and RetroMode
    Armor Impact now unlocks at level 1 in both Standard and RetroMode
    Beast Lore now unlocks at level 1 in both Standard and RetroMode
    Call Of The Wild now unlocks at level 1 in both Standard and RetroMode
    Scrap Collector now unlocks at level 1 in both Standard and RetroMode
    Treasure Hunter now unlocks at level 1 in both Standard and RetroMode
    Rupture now unlocks at level 1 in both Standard and RetroMode