@@ -217,9 +217,9 @@ Excavation.SubSkill.GigaDrillBreaker.Name=Giga Drill Breaker
 Excavation.SubSkill.GigaDrillBreaker.Description=3x Drop Rate, 3x EXP, +Speed
 Excavation.SubSkill.GigaDrillBreaker.Stat=Giga Drill Breaker Duration
 Excavation.SubSkill.Archaeology.Name=Archaeology
-Excavation.SubSkill.Archaeology.Description=Unearth the secrets of the land! Find treasure and experience orbs!
-Excavation.SubSkill.Archaeology.Stat=Archaelogy Experience Orb Rate
-Excavation.SubSkill.Archaeology.Stat.Extra={0}% chance to find {1} experience orbs alongside treasure
+Excavation.SubSkill.Archaeology.Description=Unearth the secrets of the land! High skill levels increase your odds of finding experience orbs when you find treasure!
+Excavation.SubSkill.Archaeology.Stat=Archaelogy Experience Orb Chance
+Excavation.SubSkill.Archaeology.Stat.Extra=Archaeoloy Experience Orb Amount
 Excavation.Listener=Excavation:
 Excavation.SkillName=EXCAVATION
 Excavation.Skills.GigaDrillBreaker.Off=**Giga Drill Breaker has worn off**
@@ -251,7 +251,7 @@ Fishing.SubSkill.FishermansDiet.Description=Improves hunger restored from fished
 Fishing.SubSkill.FishermansDiet.Stat=Fisherman's Diet:[[GREEN]] Rank {0}
 Fishing.SubSkill.MasterAngler.Name=Master Angler
 Fishing.SubSkill.MasterAngler.Description=Improves chance of getting a bite while fishing
-Fishing.SubSkill.MasterAngler.Stat=Added Bite Chance at your current location: [[GREEN]]+[[YELLOW]]{0}
+Fishing.SubSkill.MasterAngler.Stat=Added Bite Chance at your current location: [[GREEN]]+{0}
 Fishing.SubSkill.IceFishing.Name=Ice Fishing
 Fishing.SubSkill.IceFishing.Description=Allows you to fish in icy biomes
 Fishing.SubSkill.IceFishing.Stat=Ice Fishing
